# coinoxr-sdk

./: README.md  pyproject.toml
sdk/: __init__.py  client.py  config.py  exceptions.py
sdk/httpp/: base.py  request_client.py  stub_client.py
sdk/services/: converter.py  currencies.py  ohlc.py  rates.py  requester.py  usage.py
sdk/transport/: base.py  request_client.py  response.py  stub_client.py  types.py
sdk/utils/: dates.py
tests/: conftest.py  test_convert_service.py  test_currencies_servise.py  test_ohl_service.py  test_rates_services.py  test_requester_errors.py  test_requester_service.py  test_utils_date.py
