[project]
name = "coinoxr-python"
version = "0.1.0"
description = "Unofficial Python SDK for the Open Exchange Rates API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Pavel Simanov" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "black>=24",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
    "types-requests>=2.31",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.ruff]
line-length = 88